feat: add footer

--- a/index.html
+++ b/index.html
@@ -27,12 +27,7 @@
       <section class="intro">
         <div class="container">
           <figure class="user-image">
-            <img
-              src="img/My_photo.png"
-              width="1000"
-              height="750"
-              alt="Photo Nikolay Miron"
-            />
+            <img src="img/My_photo.png" alt="Photo Nikolay Miron" />
           </figure>
           <h4>Brief information about me</h4>
           <p>
@@ -80,5 +75,24 @@ let joinArr = reverseArr.<span>join</span>(<span>''</span>);
         </div>
       </section>
     </main>
+    <footer class="footer-container">
+      <div class="footer">
+        <a
+          class="github"
+          href="https://github.com/NikolayMiron"
+          target="_blank"
+          rel="noopener noreferrer"
+          >NikolayMiron</a
+        >
+        <a
+          class="rss"
+          href="https://rs.school/js/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <span class="rss-year">'21</span>
+        </a>
+      </div>
+    </footer>
   </body>
 </html>
